Issue #3782: os.write() must not accept unicode strings